--- a/footer.css
+++ b/footer.css
@@ -46,4 +46,6 @@ footer{
     width: 100px;
     height: 100px;
     border-radius: 200px;
+    border-color: black;
+    border-spacing: 15px;
   }
