--- a/thecure.css
+++ b/thecure.css
@@ -1,5 +1,5 @@
 body{
-  background-color: lightgrey;
+  background-color: mintcream;
 }
 
 header{
@@ -67,8 +67,13 @@ footer{
   .contact-links a:hover{
     transform: translateX(-15px);
   }
-  img{
-    width: 100px;
-    height: 100px;
-    border-radius: 200px;
+  table{
+    background-color: lightyellow;
+    width: 700px;
+    position: center;
+  }
+  cc{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+   font-weight: bold;
+   color:gray;
   }
